--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.3",
+    "react-snap": "^1.23.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "web-vitals": "^2.1.4"
